--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.5",
+    "framer-motion": "^10.18.0",
     "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
