--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
-    "tailwind-scrollbar": "^3.0.5"
+    "tailwind-scrollbar": "^3.0.5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
